simpler and faster personal image for cicd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,9 @@
-image: ubuntu:jammy
+image: sunoc/latex:latest
 
 report:
   stage: build
 
   script:
-    - apt-get --yes update
-    - DEBIAN_FRONTEND=noninteractive apt-get --yes install texlive-base texlive-latex-recommended texlive-latex-extra texlive-lang-japanese texlive-science
     - pdflatex instructions.tex
 
   artifacts:
