--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ report:
     - apt-get update -y
     - apt-get install -y python3 python3-pip
     - pip install pygments
-    - pdflatex --shell-escape instructions.tex
+    - pdflatex --shell-escape README.tex
 
   artifacts:
     paths:
-      - instructions.pdf
+      - README.pdf
