cicd pdflatex command needs to run twice to have all links correct

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ report:
     - apt-get install -y python3 python3-pip
     - pip install pygments
     - pdflatex --shell-escape README.tex
+    - pdflatex --shell-escape README.tex
 
   artifacts:
     paths:
